feat: adiciona funcionalidade de adicionar preferências
